# Tirocinio-Triennale

./: README.md
Code/laboratorio/: CMakeLists.txt  package.xml
Code/laboratorio/launch/: stepResponse.launch
Code/laboratorio/msg/: Mellinguer.msg
Code/laboratorio/scripts/: connect_log_param.py  crazyflie_logger.py  crazyflie_plotter.py  generator.py  motion_flying.py  plotter.py  sistema.py
Code/laboratorio/scripts/cache/: 509FD862.json
Code/laboratorio/scripts/vicon/: 3dplot.py  visualizer1.py
